@@ -331,7 +331,7 @@ if test -z "$TCLINCLUDE"; then
 	done
 fi
 if test -z "$TCLINCLUDE"; then
-	TCLINCLUDE="-I/usr/local/include"
+#	TCLINCLUDE="-I/usr/local/include"
     	AC_MSG_RESULT(not found)
 fi
 else
@@ -350,7 +350,7 @@ for i in $dirs ; do
 done
 if test -z "$TCLLIB"; then
 	AC_MSG_RESULT(not found)
-	TCLLIB="-L/usr/local/lib"
+#	TCLLIB="-L/usr/local/lib"
 fi
 else
 AC_MSG_RESULT($TCLLIB)
@@ -399,7 +399,7 @@ for i in $dirs ; do
 	fi
 done
 if test -z "$PYINCLUDE"; then
-	PYINCLUDE="-I/usr/local/include/Py"
+#	PYINCLUDE="-I/usr/local/include/Py"
     	AC_MSG_RESULT(not found)
 fi
 
@@ -430,8 +430,8 @@ for i in $dirs ; do
 done
 if test -z "$PYLIB"; then
 	AC_MSG_RESULT(not found)
-	PYLIB="/usr/local/lib/python/lib"
-	PYINCLUDE="$PYINCLUDE -I$PYLIB"
+#	PYLIB="/usr/local/lib/python/lib"
+#	PYINCLUDE="$PYINCLUDE -I$PYLIB"
 fi
 
 AC_SUBST(PYINCLUDE)
@@ -582,7 +582,7 @@ if test -n "$GUILE_CONFIG" ; then
   	fi
   done
   if test -z "$GUILEINCLUDE"; then
-  	GUILEINCLUDE="-I/usr/local/include"
+#  	GUILEINCLUDE="-I/usr/local/include"
       	AC_MSG_RESULT(not found)
   fi
 
@@ -597,7 +597,7 @@ if test -n "$GUILE_CONFIG" ; then
   done
   if test -z "$GUILELIB"; then
   	AC_MSG_RESULT(not found)
-  	GUILELIB="/usr/local/lib"
+#  	GUILELIB="/usr/local/lib"
   fi
 
   GUILELINK="`guile-config link`"
